--- a/composeApp/src/androidMain/res/values/strings.xml
+++ b/composeApp/src/androidMain/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Survey</string>
+    <string name="app_name">Wybory Prezydenckie 2025</string>
 </resources>
